# advent-of-code-2023

./: .clang-format  .clang-tidy  .gitignore  .woodpecker.yml  CMakeLists.txt  CMakePresets.json  COPYING  HACKING.md  README.md  vcpkg.json
.devcontainer/: Dockerfile-clang  Dockerfile-gcc  devcontainer.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  variables.cmake
source/: day1.cpp  day1.hpp  day10.cpp  day10.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  day9.hpp  step1.cpp  step1.hpp  string.cpp  string.hpp  types.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/source/: advent_tests_day1.cpp  advent_tests_day10.cpp  advent_tests_day2.cpp  advent_tests_day3.cpp  advent_tests_day4.cpp  advent_tests_day5.cpp  advent_tests_day6.cpp  advent_tests_day7.cpp  advent_tests_day8.cpp  advent_tests_day9.cpp  advent_tests_step1.cpp  advent_tests_string.cpp  advent_tests_utils.cpp
